--- a/Nathan/permutation/Permutations.ipynb
+++ b/Nathan/permutation/Permutations.ipynb
@@ -2,29 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script type = \"text/javascript\" src=\"https://d3js.org/d3.v3.min.js\"></script>\n",
-       "<script src=\"https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js\"></script>\n",
-       "<script type=\"text/x-mathjax-config\">\n",
-       "    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\\\(','\\\\)']]}});\n",
-       "</script>\n",
-       "<script type=\"text/javascript\" async\n",
-       "    src=\"https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML\">\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "%%html\n",
+    "\n",
+    "<script>\n",
+    "  function code_toggle() {\n",
+    "    if (code_shown){\n",
+    "      $('div.input').hide('500');\n",
+    "      $('#toggleButton').val('Show Code')\n",
+    "    } else {\n",
+    "      $('div.input').show('500');\n",
+    "      $('#toggleButton').val('Hide Code')\n",
+    "    }\n",
+    "    code_shown = !code_shown\n",
+    "  }\n",
+    "\n",
+    "  $( document ).ready(function(){\n",
+    "    code_shown=false;\n",
+    "    $('div.input').hide()\n",
+    "  });\n",
+    "</script>\n",
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%html\n",
     "<script type = \"text/javascript\" src=\"https://d3js.org/d3.v3.min.js\"></script>\n",
@@ -60,30 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "    <svg width=\"100%\" height=\"300px\">\n",
-       "        <circle cx=\"40\" cy=\"100\" r=\"40\" fill=\"red\"></circle>\n",
-       "        <circle cx=\"140\" cy=\"100\" r=\"40\" fill=\"blue\"></circle>\n",
-       "        <circle cx=\"240\" cy=\"100\" r=\"40\" fill=\"green\"></circle>\n",
-       "        <circle cx=\"340\" cy=\"100\" r=\"40\" fill=\"purple\"></circle>\n",
-       "        <circle cx=\"440\" cy=\"100\" r=\"40\" fill=\"yellow\"></circle>\n",
-       "    </svg>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<div>\n",
@@ -126,72 +113,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script src=\"./scripts/is_a_permutation.js\"></script>\n",
-       "\n",
-       "<style>\n",
-       "    li {\n",
-       "        margin-top: 5px;\n",
-       "    }\n",
-       "    .booleanInput {\n",
-       "        width: 30px;\n",
-       "        margin-top: 10px;\n",
-       "    }\n",
-       "    .submit-boolean {\n",
-       "        margin-left: 10px;\n",
-       "    }\n",
-       "    \n",
-       "    .correct {\n",
-       "        background-color: #33ff33;\n",
-       "    }\n",
-       "    \n",
-       "    .incorrect {\n",
-       "        background-color: #ff1a1a;\n",
-       "    }\n",
-       "    \n",
-       "    .perm-answer {\n",
-       "        margin-right: 50%;\n",
-       "        margin-top: 5px;\n",
-       "    }\n",
-       "    \n",
-       "    #is-permutation-feedback-container {\n",
-       "        margin-top: 20px;\n",
-       "        display: none;\n",
-       "    }\n",
-       "    \n",
-       "    #perm-questions {\n",
-       "        margin-top: 20px;\n",
-       "    }\n",
-       "    \n",
-       "</style>\n",
-       "\n",
-       "<div id=\"perm-questions\">\n",
-       "    <p>Check the box next to each set below if it is affected by permutations.</p>\n",
-       "    <ol id=\"boolean-permutations\">\n",
-       "        <li>The set of numbers in a 4-digit cell phone pass code<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
-       "        <li>A set of 5 people you have chosen to go to dinner with<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
-       "        <li>A set of 4 different fruits selected for a <a href=\"https://www.youtube.com/watch?v=LmR7G208ug4\" target=\"_blank\">fruit salad</a><input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
-       "        <li>A set of cars in the drive-thru at Tim Hortons<input class=\"booleanInput\" type=\"checkbox\"><span class=\"perm-answer\"></span></li><br>\n",
-       "        <input type=\"button\" value=\"Submit answers\" onclick=\"isAPermutation()\">\n",
-       "    </ol>\n",
-       "</div>\n",
-       "<div id=\"is-permutation-feedback-container\">\n",
-       "<h3>Solutions</h3>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<script src=\"./scripts/is_a_permutation.js\"></script>\n",
@@ -264,47 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<link rel=\"stylesheet\" href=\"https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css\">\n",
-       "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/experimental_circles.css\">\n",
-       "\n",
-       "\n",
-       "<div id=\"experiment-full\">\n",
-       "<p>Adjust the slider to change the number of circles available.<br>\n",
-       "    How many different permutations can you make with those circles?</p>\n",
-       "</div>\n",
-       "<div id=\"perm-range-container\">\n",
-       "    <input class=\"slider\" id=\"perm-range-slider\" type=\"range\" min=\"2\" max=\"6\" value=\"3\"><span id=\"slider-output\"></span><br>\n",
-       "</div>\n",
-       "<div id=\"circles1-answer-container\">\n",
-       "    <p id=\"circles1-answer\"></p>\n",
-       "    <input id=\"reset-circles\" type=\"button\" value=\"Reset\" onclick=\"resetCircles(this)\">\n",
-       "</div>\n",
-       "<div class=\"clear-float\"></div>\n",
-       "<div id=\"correct-permutations\" class=\"align-container\">\n",
-       "    <table id=\"correct-permutations-table\">\n",
-       "\n",
-       "    </table>\n",
-       "</div>\n",
-       "<div class=\"clear-float\"></div>\n",
-       "<div id=\"circles1-diff-permutations\"> \n",
-       "</div>\n",
-       "<script src=\"./scripts/circles.js\"></script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -359,42 +245,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div id=\"experiment-subset\">\n",
-       "  \n",
-       "</div>\n",
-       "<div id=\"perm-subset-range-container\">\n",
-       "    <input class=\"slider\"  id=\"perm-fullsubset-range-slider\" type=\"range\" min=\"4\" max=\"7\" value=\"5\"><p id=\"slider-full-output\"></p><br>\n",
-       "    <input class=\"slider\"  id=\"perm-fillsubset-range-slider\" type=\"range\" min=\"2\" max=\"4\" value=\"3\"><p id=\"slider-fill-output\"></p><br>\n",
-       "</div>\n",
-       "<div class=\"clear-float\"></div>\n",
-       "    <div id=\"circles-subset-answer-container\">\n",
-       "          <p id=\"circles-subset-answer\"></p>\n",
-       "          <input id=\"reset-circles-subset\" type=\"button\" value=\"Reset\" onclick=\"resetCircles_subset(this)\">\n",
-       "    </div>\n",
-       "</div>\n",
-       "<div class=\"clear-float\"></div>\n",
-       "<div id=\"correct-subset-permutations\" class=\"align-container\">\n",
-       "    <table id=\"correct-subset-permutations-table\">\n",
-       "\n",
-       "    </table>\n",
-       "</div>\n",
-       "<script src=\"./scripts/circles_subset.js\"></script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -472,34 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/perm_table.css\">\n",
-       "<script src=\"./scripts/table_nchooser.js\"></script>\n",
-       "\n",
-       "<div id=\"table-container\">\n",
-       "<table id=\"permutation-table\">\n",
-       "</table>\n",
-       "    <div id=\"table-button-container\">\n",
-       "        <input id=\"submit-table-button\" type=\"button\" value=\"Submit Answers\" onclick=\"showFeedback()\">\n",
-       "        <input id=\"show-solutions-button\" class=\"hidden\" type=\"button\" value=\"Show Solution\" onclick=\"showTableSolution()\">\n",
-       "        <input id=\"unshow-solutions-button\" class=\"hidden\" type=\"button\" value=\"Unshow Solution\" onclick=\"unshowTableSolution()\">\n",
-       "    </div>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
@@ -540,22 +368,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe width=\"854\" height=\"480\" src=\"https://www.youtube.com/embed/zxxrR2oa0-M\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<iframe width=\"854\" height=\"480\" src=\"https://www.youtube.com/embed/zxxrR2oa0-M\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
@@ -570,33 +385,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<link rel=\"stylesheet\" type=\"text/css\" href=\"./css/restrictions.css\">\n",
-       "<script src=\"./scripts/restrictions.js\"></script>\n",
-       "\n",
-       "<div id=\"restriction-questions-container\">\n",
-       "    <h2>Exercises</h2>\n",
-       "</div>\n",
-       "<div id=\"restriction-solutions-container\" class=\"hidden\">\n",
-       "    <h2>Solutions</h2>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "\n",
